Kubernetes/8.Ingress/2.SSL/ingress-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - kube-book.com
    secretName: kube-book-secret
  rules:
  - host: kube-book.com
    http:
      paths:
      - path: /
        backend: 
          serviceName: s1
          servicePort: 80
